# madera-screenshot-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  build.sh  index.html  install.ps1  kill-process.ps1  package-lock.json  package.json  run-dev.bat  run-dev.ps1  run-dev.sh  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.claude/explained/: AUTOMATION-BLUEPRINT.md  CLAUDE-HUB-EXPLAINED.md  CLAUDE-SKILLS-EXPLAINED.md  CLAUDE-TOOLBOX-EXPLAINED.md  GIT-AUTO-REVIEW-TO-PR.md  HEADLESS-LC-WORKFLOW-EXPLAINED.md  HOWTO_AGENT.md  LLM-OPTIMIZED-EXPLAINED.md  MCP-EXPLAINED.md  OPENDECK-SOOMFON.md  PROMPT-ENGINEERING-EXPLAINED.md  PROTOCOLS-EXPLAINED.md  USE-XML-EXPLAINED.md  WORKFLOW-SYSTEM-REFERENCE.md  coding-rules-101.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create-icon.ps1  create-png.cjs  icon.icns
src-tauri/src/: capture.rs  clipboard.rs  clipboard_monitor.rs  color_picker.rs  history.rs  lib.rs  main.rs  native_selection.rs  snippet_manager.rs  ssh_uploader.rs  wayland_focus.rs  window_layout.rs
src/components/: ColorPicker.tsx  Dashboard.tsx  DesktopGuardian.tsx  Editor.tsx  History.tsx  MultiPaster.tsx  PinView.tsx  QuickPasteModal.tsx  SelectionOverlay.tsx  SettingsModal.tsx  SettingsPage.tsx  WakePopup.tsx
src/stores/: appStore.ts
src/utils/: theme.ts
